cmake_minimum_required(VERSION 2.8.0)
set(PROJECT_NAME sorting)
set(ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/../..)
project(${PROJECT_NAME})
add_subdirectory(${ROOT_DIR}/DS DS_binnary_dir)
add_subdirectory(${ROOT_DIR}/myTools myTools_binnary_dir)
add_executable(${PROJECT_NAME} main.c)
target_link_libraries(${PROJECT_NAME} PRIVATE DS myTools)